<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_top">
        <item android:id="@+id/eng_viet_menu" android:title="@string/english_vietnamese" android:icon="@drawable/ic_eng_viet"/>
        <item android:id="@+id/eng_eng_menu" android:title="@string/english_english" android:icon="@drawable/ic_eng_eng"/>
        <item android:id="@+id/viet_eng_menu" android:title="@string/vietnamese_english" android:icon="@drawable/ic_viet_eng"/>
        <item android:id="@+id/favorite_menu" android:title="@string/favorite" android:icon="@drawable/ic_favorite"/>
        <item android:id="@+id/your_menu" android:title="@string/your_words" android:icon="@drawable/ic_your_words"/>

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item android:title="Communicate">
            <menu>
                <item android:id="@+id/share_menu" android:title="@string/share" android:icon="@drawable/ic_share"/>
                <item android:id="@+id/help_menu" android:title="@string/help" android:icon="@drawable/ic_help"/>
            </menu>
        </item>

    </group>

</menu>